removed index.html from sitemap.xml

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/gallery-styles.css" />
 
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-    <title>Persona Bridal Studio - Gallery</title>
+    <title>Persona Beauty Salon, Palakkad - Gallery</title>
 
  
   </head>
