redirect non-www to www

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+   <link rel="canonical" href="https://www.personabeautysalon.in/">
     <meta name="description" content="If you are looking for a parlour that specializes in Bridal Makeup, Hair and Skincare Services, you’ve found it! Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals."/>
             <title>Persona Beauty Salon - Palakkad</title>
        <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
