removed index.html reference in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     >
       <div class="container-fluid">
         <!-- icon & brand name -->
-        <a href="index.html" aria-current="page" class="navbar-brand">
+        <a href="/" aria-current="page" class="navbar-brand">
           <!-- <img src="images/logo.png" alt="logo" width="150" /> -->
           <img
             src="images/persona logo.png"
@@ -62,7 +62,7 @@
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-4">
               <a
-                href="index.html#about"
+                href="/#about"
                 class="nav-link fw-semibold"
                 onclick="scrollToSection('#about')"
                 >About</a
@@ -71,7 +71,7 @@
 
             <li class="nav-item px-4">
               <a
-                href="index.html#services"
+                href="/#services"
                 class="nav-link fw-semibold"
                 onclick="scrollToSection('#services')"
                 >Services</a
@@ -79,7 +79,7 @@
             </li>
             <li class="nav-item px-4">
               <a
-                href="index.html#portfolios"
+                href="/#portfolios"
                 class="nav-link fw-semibold"
                 onclick="scrollToSection('#portfolios')"
                 >Gallery</a
@@ -87,7 +87,7 @@
             </li>
             <li class="nav-item px-4">
               <a
-                href="index.html#testimonials"
+                href="/#testimonials"
                 class="nav-link fw-semibold"
                 onclick="scrollToSection('#testimonials')"
                 >Testimonials</a
