--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ We ensure you will look stunning and feel confident on your special day.
             <div class="card h-100 p-3 p-md-0 rounded-0 shadow-lg border-0" id="service-card-1">
               <div class="image-container d-flex flex-row align-items-center">
                   <img src="images/icons/makeup.png" width="100px" alt="">
-                  <h3 class="h5 card-title">Makeup</h5>
+                  <h3 class="h5 card-title">Makeup</h3>
               </div>
               <p class="card-text ms-4 pe-2">
                   Elevating your beauty from weddings to photoshoots, with premium makeup and personalized techniques to ensure you feel confident and stunning on your special day.
@@ -253,7 +253,7 @@ We ensure you will look stunning and feel confident on your special day.
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body p-5">
-        <h3 class="h4 text-secondary">Our Signature Hair Treatments</h4>
+        <h3 class="h4 text-secondary">Our Signature Hair Treatments</h3>
         <ul class="list-unstyled list-group list-group-flush mb-5">
           <li class="list-group-item">
 
@@ -422,7 +422,7 @@ We ensure you will look stunning and feel confident on your special day.
                 </div>
                 <!-- 3 -->
                <div class="photo-container text-center rounded-5">
-                 <img src="images/brides/IMG-20221013-WA0010.jpg" alt="bride photo"loading="lazy"  class="photo img-fluid shadow-1-strong rounded" >
+                 <img src="images/brides/IMG-20221013-WA0010.jpg" alt="bride photo" loading="lazy"  class="photo img-fluid shadow-1-strong rounded" >
                 </div>
                 <!-- 4 -->
                 <div class="photo-container text-center rounded-5">
@@ -607,7 +607,7 @@ I have joined 6 Months Beautician & Makeup Course at Persona's Beauticians Accad
       <script defer src="js/glider.min.js"></script>
       <script defer src="js/glider.js"></script> 
 
-      <script defer src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 
 
    
