--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/gallery-styles.css" />
 
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-    <title>Persona Beauty Salon, Palakkad - Gallery</title>
+    <title>Persona Beauty Salon | Palakkad - Bridal Photos</title>
 
  
   </head>
