--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="canonical" href="https://www.personabeautysalon.in/">
     <meta name="description" content="If you are looking for a parlour that specializes in Bridal Makeup, Hair and Skincare Services, you’ve found it! Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals."/>
-            <title>Persona Beauty Salon - Palakkad</title>
+           <title>Trusted Beauty Salon in Palakkad | Hair, Skin, Bridal Makeup Services</title>
        <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
      <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" type="image/jpeg" />
      <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" type="image/jpeg" />
