--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
   <script defer src="js/replaceme.min.js"></script>
-
+<script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script defer src="js/script.js"></script>
      <script defer src="js/bootstrap.bundle.min.js"></script>
     <noscript>
@@ -603,7 +603,7 @@ I have joined 6 Months Beautician & Makeup Course at Persona's Beauticians Accad
     <!-- footer end -->
     <!-- scripts -->
   
-<script async src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
       <script defer src="js/glider.min.js"></script>
       <script defer src="js/glider.js"></script> 
 
